# lake_temp_work

./: .gitignore  .gitmodules  FUT_lake_range.txt  README.md  file-changer-spec.txt  lakeTempParamChanger.py  paramChanger.py  testParamChanger.py
documentation/: lake_temperature.odp
documentation/check_coverage/: advanced_checks.md  simple_checks.md
documentation/for_collaborators/: .~lock.TestingSoftwareOverview.odp#  AnalysisOverview.pptx  LakeTemperature.odp  TestingSoftwareOverview.odp  testing_process.md
documentation/from_collaborators/: project_history.md
documentation/lake-temperature-mapper/: cli.md  config-reader.md  configure-mapper.md  defaults-writer.md  (+4 more)
fileChanger/: copyOflakeparams.txt  copyOftestFile.txt  lakeTempParamChanger.py  paramChanger.py  testParamChanger.py
lake_temperature_mapper/: Dockerfile  fake_LakeTemperatureRef.txt  lakeparams.txt
newlaketemperature/: LakeCon.F90  Makefile  ReadInputParamsMod.F90  main.F90
test_results/: combinatorial_fault_finding_runs.md  combinatorial_timing.md  outdated_combinatorial_timing.md  outdated_which_inputs_affect_outputs.md  updated_combinatorial_timing.md  updated_which_inputs_affect_outputs.md  which_inputs_affect_outputs.md
testing/: Dockerfile  Dockerfile.old  test_laketemperature.py  test_laketemperature.sh
testing/utils/acts_csv_to_ncdf_cases/: pyproject.toml  requirements.txt
testing/utils/acts_csv_to_ncdf_cases/src/csv2nc/: __init__.py  cases.py  main.py  partition.py  writer.py
testing/utils/acts_csv_to_ncdf_cases/test_files/: output.nc  test_cases.csv  test_partition.nc
(+440 files in other folders)
